--- a/1.html
+++ b/1.html
@@ -13,8 +13,7 @@
  <h3>퍼스널컬러</h3>
  <p>퍼스널컬러를 진단받았는데 어떤 색깔이 어울리는지 감이 잘 잡히지 않으신가요?
     <br>중구난방 기준을 모르겠는 컬러칩이 혼란스러우신가요?
-    <br>제대로 정리된 자료가 없어 어려움을 격고 계신가요?
-    <br>퍼스널컬러에 맞는 화장품을 알고 싶으신가요?
+    <br>퍼스널컬러에 맞는 제품을 알고 싶으신가요?
     <br>모아모아에서는 꾸미고 싶은 당신, 더 많이 알고싶은 당신을 위해 정보를 모아두었습니다!
 </body>
 </html>
